--- a/main.html
+++ b/main.html
@@ -7,9 +7,16 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<h1>"Feedback Form"</h1>
+	<label for="name">Name*</label>
+	<input type="text" name="Name" value="" id="name"><br><br>
+	<label for="portfolio">Portfolio*</label>
+	<input type="text" name="portfolio" value="" id=""portfolio"">
+	<br><br>
+	<label for="favColor">favColor:</label>
+	<input type="color" name="favColor" value="" id=""favColor""><br><br>
+	<label for="likeness">likeness:</label>
+	<input type="range" minlength="1" maxlength="100">
 
 </body>
 
