--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<h1>"Feedback Form"</h1>
+	<form action="submit"></form>
 	<label for="name">Name*</label>
 	<input type="text" name="Name" value="" id="name"><br><br>
 	<label for="portfolio">Portfolio*</label>
@@ -17,6 +18,9 @@
 	<input type="color" name="favColor" value="" id=""favColor""><br><br>
 	<label for="likeness">likeness:</label>
 	<input type="range" minlength="1" maxlength="100">
+	<br>
+	<br>
+	<button>Submit</button>
 
 </body>
 
