--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<h1>"Feedback Form"</h1>
-	<form action="submit"></form>
+	<form action="submit">
 	<label for="name">Name*</label>
 	<input type="text" name="Name" value="" id="name"><br><br>
 	<label for="portfolio">Portfolio*</label>
@@ -21,6 +21,7 @@
 	<br>
 	<br>
 	<button>Submit</button>
+		</form>
 
 </body>
 
