--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<h1>"Feedback Form"</h1>
-	<form action="submit">
+	<form >
 	<label for="name">Name*</label>
 	<input type="text" name="Name" value="" id="name"><br><br>
 	<label for="portfolio">Portfolio*</label>
@@ -17,7 +17,7 @@
 	<label for="favColor">favColor:</label>
 	<input type="color" name="favColor" value="" id=""favColor""><br><br>
 	<label for="likeness">likeness:</label>
-	<input type="range" minlength="1" maxlength="100">
+	<input type="range" min="1" maxlength="100">
 	<br>
 	<br>
 	<button>Submit</button>
