--- a/main.html
+++ b/main.html
@@ -10,14 +10,11 @@
 	<h1>"Feedback Form"</h1>
 	<form >
 	<label for="name">Name*</label>
-	<input type="text" name="Name" value="" id="name"><br><br>
-	<label for="portfolio">Portfolio*</label>
-	<input type="text" name="portfolio" value="" id=""portfolio"">
-	<br><br>
+	<input type="text" minlength="3" maxlength="50" id="portfolio"><br><br>
 	<label for="favColor">favColor:</label>
 	<input type="color" name="favColor" value="" id=""favColor""><br><br>
 	<label for="likeness">likeness:</label>
-	<input type="range" min="1" maxlength="100">
+	<input type="range" minlength="1" maxlength="100" id="likeness">
 	<br>
 	<br>
 	<button>Submit</button>
