--- a/main.html
+++ b/main.html
@@ -9,8 +9,10 @@
 <body>
 	<h1>"Feedback Form"</h1>
 	<form >
-	<label for="name">Name*</label>
-	<input type="text" minlength="3" maxlength="50" id="portfolio"><br><br>
+	<label for="name">Enter your Name</label>
+	<input type="text" minlength="3" maxlength="50" required id="portfolio" placeholder="Enter your Name"><br><br>
+		<label for="name">Enter your portfolio</label>
+		<input type="text" required id="portfolio" placeholder="Enter your portfolio"><br><br>
 	<label for="favColor">favColor:</label>
 	<input type="color" name="favColor" value="" id=""favColor""><br><br>
 	<label for="likeness">likeness:</label>
