--- a/main.html
+++ b/main.html
@@ -8,14 +8,14 @@
 
 <body>
 	<h1>"Feedback Form"</h1>
-	<form >
+	<form action="Submit" method="post">
 	<label for="name">Enter your Name</label>
 	<input type="text" minlength="3" maxlength="50" required id="portfolio" placeholder="Enter your Name"><br><br>
 		<label for="name">Enter your portfolio</label>
-		<input type="text" required id="portfolio" placeholder="Enter your portfolio"><br><br>
-	<label for="favColor">favColor:</label>
+		<input type="url" required id="portfolio" placeholder="Enter your portfolio"><br><br>
+	<label for="favColor">Enter your favColor:</label>
 	<input type="color" name="favColor" value="" id=""favColor""><br><br>
-	<label for="likeness">likeness:</label>
+	<label for="likeness">Enter your likeness:</label>
 	<input type="range" minlength="1" maxlength="100" id="likeness">
 	<br>
 	<br>
