--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<h1>"Feedback Form"</h1>
-	<form action="Submit" method="post">
+	<form action="/Submit" method="post">
 	<label for="name">Enter your Name</label>
 	<input type="text" minlength="3" maxlength="50" required id="portfolio" placeholder="Enter your Name"><br><br>
 		<label for="name">Enter your portfolio</label>
